Add FFM kqueue benchmark scenarios
Add FfmKQueueEchoServer and FfmKQueueHttpServer that mirror the
JNI-backed equivalents but use the FFM kqueue transport, enabling
head-to-head performance comparison.

Register four scenarios in BenchmarkScenario (echo 1KB/100c,
64KB/100c, 1KB/1000c, http/100c) and add a benchmark.scenario filter
to LoadTestOrchestrator so subsets can be run via
-Dbenchmark.scenario=<substring>.

Wire required JVM flags into ServerLauncher: --enable-native-access
plus --add-opens for sun.nio.ch and java.io (needed by the sendfile
path's FileDescriptorUtil reflection). Add the netty5-ffm dependency
in benchmarks/pom.xml.